chore(): Delete dataset version property