@@ -20,7 +20,6 @@ import static java.util.Optional.ofNullable;
 
 import com.fasterxml.jackson.databind.annotation.JsonDeserialize;
 import com.fasterxml.jackson.databind.annotation.JsonSerialize;
-import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
@@ -42,18 +41,19 @@ public interface KeyValue {
 
     static List<KeyValue> fromMap(Map<String, String> map) {
         return map.keySet().stream()
-            .map((key) -> ImmutableKeyValue.builder()
+            .map((key) -> (KeyValue) ImmutableKeyValue.builder()
                 .key(key)
                 .value(map.get(key))
-                .build())
-            .collect(Collectors.toList());
+                .build()
+            )
+            .toList();
     }
 
     static Map<String, String> toMap(List<KeyValue> list) {
         return ofNullable(list)
             .map(l -> l.stream()
                 .filter(kv -> StringUtils.isNoneBlank(kv.key()))
-                .collect(Collectors.toMap(KeyValue::key, KeyValue::value, (k1, k2) -> k1, LinkedHashMap::new)))
-            .orElseGet(LinkedHashMap::new);
+                .collect(Collectors.toUnmodifiableMap(KeyValue::key, KeyValue::value, (k1, k2) -> k1)))
+            .orElseGet(Map::of);
     }
 }
