@@ -31,7 +31,7 @@ public class DataSetMapper {
             .lastUpdated(dataSet.creationDate)
             .tags(dataSet.tags)
             .constants(KeyValue.fromMap(dataSet.constants))
-            .datatable(dataSet.datatable.stream().map(KeyValue::fromMap).collect(Collectors.toList()))
+            .datatable(dataSet.datatable.stream().map(KeyValue::fromMap).toList())
             .build();
     }
 
@@ -43,7 +43,7 @@ public class DataSetMapper {
             .withCreationDate(dto.lastUpdated())
             .withTags(dto.tags())
             .withConstants(KeyValue.toMap(dto.constants()))
-            .withDatatable(dto.datatable().stream().map(KeyValue::toMap).collect(Collectors.toList()))
+            .withDatatable(dto.datatable().stream().map(KeyValue::toMap).toList())
             .build();
     }
 }
